[package]
name = "refinery_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
svix-ksuid = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.15.0"
rand = "0.9.0"
